# HelpfulClipboard

./: .gitignore  CMakeLists.txt  README.md
.vscode-/: launch.json  tasks.json
source/: BaseUIWidget.cpp  BaseUIWidget.h  ClipboardListener.cpp  ClipboardListener.h  ClipboardManager.cpp  ClipboardManager.h  DataStruct.cpp  DataStruct.h  FloatingBall.cpp  FloatingBall.h  KeyboardListener.cpp  KeyboardListener.h  ListItemUIWidget.cpp  ListItemUIWidget.h  MainController.cpp  MainController.h  QuickSlot.cpp  QuickSlot.h  Quickbar.cpp  Quickbar.h  Sidebar.cpp  Sidebar.h  SidebarWidget.cpp  SidebarWidget.h  SlotUIWidget.cpp  SlotUIWidget.h  WindowsHelper.cpp  WindowsHelper.h  main.cpp
